Fix overflow bug in CheckoutView.vue

--- a/packages/client/src/assets/base.css
+++ b/packages/client/src/assets/base.css
@@ -20,3 +20,7 @@
 button {
   padding: 0.375rem;
 }
+
+section {
+  margin: 0;
+}
